# MediaCrawler_MCP_Server

./: LICENSE  README.md  db.py  main.py  pyproject.toml
config/: base_config.py  bilibili_config.py  db_config.py
schema/: sqlite_tables.db  sqlite_tables.sql  tables.sql
test/: __init__.py  creator_test.py  detail_test.py  search_test.py
