[project]
name = "mediacrawler_mcp_server"
version = "0.1.0"
author = "Bowenwin <bowenxu505@gmail.com>"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "aiomysql==0.2.0",
    "aiosqlite==0.21.0",
    "annotated-types==0.7.0",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "contourpy==1.3.3",
    "cssselect==1.3.0",
    "cycler==0.12.1",
    "fastapi==0.116.1",
    "fonttools==4.59.0",
    "greenlet==3.2.3",
    "h11==0.14.0",
    "httpcore==0.17.3",
    "httpx==0.24.0",
    "jieba==0.42.1",
    "jmespath==1.0.1",
    "kiwisolver==1.4.8",
    "lxml==6.0.0",
    "matplotlib==3.10.3",
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "packaging==25.0",
    "pandas==2.3.1",
    "parsel==1.10.0",
    "pillow==11.3.0",
    "playwright==1.54.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pyee==13.0.0",
    "pyexecjs==1.5.1",
    "pymysql==1.1.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "redis==6.2.0",
    "requests==2.32.4",
    "six==1.17.0",
    "starlette==0.47.2",
    "tenacity==9.1.2",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "w3lib==2.3.1",
    "wordcloud==1.9.4"
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
